--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 github.client_id: 59b0988cb12c802d60d2
 github.client_secret: 6cef68ea9dbc7fb9aafed1049ec9eb6dc8a71a67
-github.redirect_uri=http://localhost:8080/index
+github.redirect_uri=https://github-browsing-tool.herokuapp.com/index
 github.scopes=user,repo
